--- a/StockUtilDaemon/StockUtilDaemon.csproj
+++ b/StockUtilDaemon/StockUtilDaemon.csproj
@@ -69,17 +69,22 @@
   <ItemGroup>
     <Compile Include="database\DatabaseConst.cs" />
     <Compile Include="database\DatabaseController.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Login.Designer.cs">
+      <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="model\DailyTradingModel.cs" />
+    <Compile Include="proxy\KiwoomApiProxy.cs" />
+    <Compile Include="StockDataCollector.cs" />
+    <Compile Include="StockUtilMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="util\DataUtil.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="util\DateUtil.cs" />
+    <Compile Include="util\LogUtil.cs" />
+    <EmbeddedResource Include="Login.resx">
+      <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -130,7 +135,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="model\" />
+    <Folder Include="service\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
